change paypal link ; fix issue with account save

--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -113,7 +113,7 @@
     </p>
 
     <p>
-    You may contribute by giving money on <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=4EFH86M88SQAC">Paypal (€)</a> or <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=FXEPSXHMWBU9Q">Paypal ($)</a>.
+    You may contribute by giving money on <a href="https://paypal.me/alsciende">Paypal</a>.
     </p>
 
     <p>
