fix deck import #38 ; deck init waits for app.data event only if needed

--- a/src/AppBundle/Resources/views/Export/plain.txt.twig
+++ b/src/AppBundle/Resources/views/Export/plain.txt.twig
@@ -1,6 +1,7 @@
 {{ deck.name }}
 
-{{ deck.faction.name }}{% if deck.agenda %} / {{ deck.agenda.name }}{% endif %}
+{{ deck.faction.name }}
+{% if deck.agenda %}{{ deck.agenda.name }}{% endif %}
 
 
 {% set first_pack = deck.included_packs|first %}
