add code for the odds calculator; fix #41

--- a/src/AppBundle/Resources/views/Decklist/decklist.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklist.html.twig
@@ -81,6 +81,6 @@
 </div>
 {% include 'AppBundle:Decklist:export-modal.html.twig' %}
 {% include 'AppBundle:Decklist:delete-modal.html.twig' %}
-{% include 'AppBundle:Decklist:odds-modal.html.twig' %}
+{% include 'AppBundle:Modale:odds.html.twig' %}
 {% include 'AppBundle:Decklist:compare-modal.html.twig' %}
 {% endblock %}
