add a new User Management admin panel

--- a/src/AppBundle/Resources/views/Admin/index.html.twig
+++ b/src/AppBundle/Resources/views/Admin/index.html.twig
@@ -17,5 +17,9 @@
 <li><a href="{{ path('excel_download_form') }}">Download a file</a></li>
 <li><a href="{{ path('excel_upload_form') }}">Upload a file</a></li>
 </ul>
+<h2>User Management</h2>
+<ul>
+<li><a href="{{ path('admin_find_user') }}">Find a User</a></li>
+</ul>
 </div>
 {% endblock %}
