add print grid ; fix #42

--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -445,6 +445,9 @@ article.review .review-comment {
 /* PRINT STYLESHEETS */
 
 @media print {
+	h1 {
+		font-size: 24px;
+	}
   a[href]:after {
     content: none !important;
   }
@@ -453,6 +456,19 @@ article.review .review-comment {
   	padding: 0;
   	min-height: auto;
   }
+  
+	.col-print-1 {width:8%;  float:left;}
+	.col-print-2 {width:16%; float:left;}
+	.col-print-3 {width:25%; float:left;}
+	.col-print-4 {width:33%; float:left;}
+	.col-print-5 {width:42%; float:left;}
+	.col-print-6 {width:50%; float:left;}
+	.col-print-7 {width:58%; float:left;}
+	.col-print-8 {width:66%; float:left;}
+	.col-print-9 {width:75%; float:left;}
+	.col-print-10{width:83%; float:left;}
+	.col-print-11{width:92%; float:left;}
+	.col-print-12{width:100%; float:left;}
 }
 
 /*************** DECK(LIST) COMPARE *****************/
