add link to refresh card data in deckbuilder

--- a/src/AppBundle/Resources/views/Builder/deckedit.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckedit.html.twig
@@ -81,6 +81,12 @@
 <!-- Right-side Column -->
 
 </div><!-- .row -->
+
+<div class="row">
+	<p class="text-center text-muted small">
+		<a href="#" class="data-update">Refresh all application data</a>
+	</p>
+</div>
 </div><!-- .container -->
 
 {% include 'AppBundle:Modale:odds.html.twig' %}
