--- a/src/AppBundle/Resources/views/Decklist/decklists.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklists.html.twig
@@ -49,7 +49,7 @@ $(function () {
 {% set linkurl = path('decklists_searchform') %}<li class="{% if url == linkurl %}active{% endif %}"><a href="{{ linkurl }}"><span class="fa fa-search"></span> Search</a></li>
 </ul>
 
-{% include 'AppBundle:Default:google_adaptable_ad.html.twig' %}
+{% include 'AppBundle:Default:google-adaptable-ad.html.twig' %}
 
 </div>
 
