--- a/src/AppBundle/Resources/views/Default/google-adaptable-ad.html.twig
+++ b/src/AppBundle/Resources/views/Default/google-adaptable-ad.html.twig
@@ -2,7 +2,7 @@
 <!-- Adaptable -->
 <ins class="adsbygoogle"
      style="display:block"
-     data-ad-client="ca-pub-2254488884647695"
-     data-ad-slot="3777512162"
+     data-ad-client="{{ google_adsense_client }}"
+     data-ad-slot="{{ google_adsense_slot }}"
      data-ad-format="auto"></ins>
 </div>
