--- a/src/AppBundle/Resources/views/Search/searchform.html.twig
+++ b/src/AppBundle/Resources/views/Search/searchform.html.twig
@@ -310,7 +310,7 @@
 </fieldset>
 </form>
 
-{% include 'AppBundle:Default:google_adaptable_ad.html.twig' %}
+{% include 'AppBundle:Default:google-adaptable-ad.html.twig' %}
 
 </div>
 
