--- a/src/AppBundle/Resources/views/Default/google-analytics.html.twig
+++ b/src/AppBundle/Resources/views/Default/google-analytics.html.twig
@@ -4,6 +4,6 @@
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-ga('create', 'UA-66375548-1', 'auto');
+ga('create', '{{ google_analytics_tracking_code }}', 'auto');
 ga('send', 'pageview');
 </script>
