--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -35,6 +35,11 @@
     </div>
     {% endfor %}
     </div>
+    <div class="row">
+    	<div class="col-md-12">
+    		{% include "AppBundle:Default:google-adaptable-ad.html.twig" %}
+    	</div>
+    </div>
 </div>
 
 {% endblock %}
