--- a/src/AppBundle/Resources/views/Search/display-card.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-card.html.twig
@@ -49,7 +49,7 @@
         </div>
     </div>
     <div class="col-md-3">
-        {% include 'AppBundle:Default:google_adaptable_ad.html.twig' %}
+        {% include 'AppBundle:Default:google-adaptable-ad.html.twig' %}
     </div>
 </div>
 
