--- a/src/AppBundle/Resources/views/Search/card-pack.html.twig
+++ b/src/AppBundle/Resources/views/Search/card-pack.html.twig
@@ -1,1 +1,1 @@
-<span class="card-pack pull-right">{{ card.pack_name }} #{{ card.position }}.</span>
+<div class="card-pack">{{ card.pack_name }} #{{ card.position }}.</div>
