--- a/src/AppBundle/Resources/views/Search/display-spoiler.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-spoiler.html.twig
@@ -7,16 +7,17 @@
 {% for col in 0..2 %}
 {% if row*3+col < cards|length %}
 {% set card = cards[row*3+col] %}
-<div class="col-sm-4 icon-bg icon-{{ card.faction_code }} display-spoiler-card">
+<div class="col-sm-4 display-spoiler-card">
 	<h4>
-		{% include 'AppBundle:Search:card-name.html.twig' %}
+		{% include 'AppBundle:Search:card-name-with-link.html.twig' %}
 	</h4>
 	<div class="card-content">
+		{% include 'AppBundle:Search:card-faction.html.twig' %}
 		{% include 'AppBundle:Search:card-info.html.twig' %}
 		{% include 'AppBundle:Search:card-text.html.twig' %}
 		{% include 'AppBundle:Search:card-flavor.html.twig' %}
 		{% include 'AppBundle:Search:card-illustrator.html.twig' %}
-		{% include 'AppBundle:Search:card-pack-faction.html.twig' %}
+		{% include 'AppBundle:Search:card-pack.html.twig' %}
 	</div>
 </div>
 {% endif %}
