--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -208,7 +208,7 @@ div.tags span.tag:not(:first-child)::before {
 
 /********* DRAW SIMULATOR ************/
 
-#table-draw-simulator-content img {width:98px;float:left;margin:5px;box-shadow: black 0px 0px 5px;border-radius: 5px;}
+#table-draw-simulator-content img {width:98px;height:136px;float:left;margin:5px;box-shadow: black 0px 0px 5px;border-radius: 5px;}
 #table-draw-simulator-content img.trashed {opacity: 0.25;box-shadow: none;}
 #table-draw-simulator-content img.trashed:hover {opacity: 0.75;}
 #table-draw-simulator-content div.card-proxy {background:#888;color:white;width:99px;height:138px;float:left;margin:5px;box-shadow: black 0px 0px 5px;border-radius: 5px;}
