some column renamed ; json importer

--- a/src/AppBundle/Resources/views/Cycle/show.html.twig
+++ b/src/AppBundle/Resources/views/Cycle/show.html.twig
@@ -22,8 +22,8 @@
                 <td>{{ entity.position }}</td>
             </tr>
             <tr>
-                <th>isBox</th>
-                <td>{{ entity.isBox }}</td>
+                <th>Size</th>
+                <td>{{ entity.size }}</td>
             </tr>
             </tbody>
     </table>
