--- a/src/AppBundle/Resources/views/macros.html.twig
+++ b/src/AppBundle/Resources/views/macros.html.twig
@@ -22,6 +22,12 @@
 <small title="User Reputation">{{ user.reputation }}</small>
 {% endmacro %}
 
+{% macro username_colorless(user) %}
+<a href="{{ path('user_profile_public', {user_id:user.id,user_name:user.username|e('url')}) }}" class="username">{{ user.username }}</a>
+{% if user.donation > 0 %}<span class="fa fa-gift donator" title="ThronesDB Gracious Donator"></span>{% endif %}
+<small title="User Reputation">{{ user.reputation }}</small>
+{% endmacro %}
+
 {% macro decklist_social_icons(decklist) %}
 <span class="social-icons">
 	<a id="social-icon-like" href="#" class="social-icon-like" data-toggle="tooltip" data-placement="bottom" title="Like">
