display the sets in the correct order in the search page; fix https://github.com/Alsciende/thronesdb-json-data/issues/27

--- a/src/AppBundle/Resources/views/Search/searchform.html.twig
+++ b/src/AppBundle/Resources/views/Search/searchform.html.twig
@@ -70,7 +70,7 @@
 				<select class="form-control" name="e" id="e">
 					<option value="">any</option>
 					{% for pack in packs %}
-					<option value="{{ pack.code }}">{{ pack.name }}</option>
+					<option value="{{ pack.code }}">{{ pack.label }}</option>
 					{% endfor %}
 				</select>
 			</div>
