doc page for OAuth2

--- a/src/AppBundle/Resources/views/Default/apiIntro.html.twig
+++ b/src/AppBundle/Resources/views/Default/apiIntro.html.twig
@@ -13,7 +13,8 @@
 
 <h3>Public and OAuth2</h3>
 
-<p>There are two kinds of API endpoints: Public and OAuth2. Public API endpoints are available to everyone, while OAuth2 API endpoints are only available to registered clients (applications). If you need such an access, please send me an email describing your project and I'll send you credentials.<p>
+<p>There are two kinds of API endpoints: Public and OAuth2. Public API endpoints are available to everyone, while OAuth2 API endpoints are only available to registered clients (applications). 
+If you need such an access, please send me an email describing your project, including the Application Name, the Application Website and a Redirect URI (you can read <a href="https://www.digitalocean.com/community/tutorials/an-introduction-to-oauth-2#application-registration">this awesome page</a> for more info on OAuth2) and I'll send you credentials.<p>
 
 <h3>Documentation</h3>
 
