--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -2,7 +2,7 @@
 {% import "AppBundle::macros.html.twig" as macros %}
 
 {% block body %}
-<div class="main container">
+<div class="main white container">
 <div class="row">
 <div class="col-md-4">
 <ul data-toc="div#rules" data-toc-headings="h1,h2,h3"></ul>
