--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -1607,7 +1607,9 @@
 <p>To initiate a challenge, the active player does the following. The game treats these criteria as being performed atomically (all at once), and they must all be completed together in order to initiate a challenge.</p>
 
 <ul>
-<li>  Announces the type of challenge ([military], [intrigue], or [power]) being initiated.*   Announces the opponent against whom the challenge is being initiated.*   Announces which characters (under his or her control) are being declared as attackers, and kneels them simultaneously. In order to be eligible as an attacker, a character must have a challenge icon that corresponds with the type of challenge being initiated, and the character must be standing. At least one character must be declared as an attacker to initiate a challenge. Any character with the stealth keyword that has been declared as an attacker also chooses its stealth targets at this time if its controller desires to use the stealth keyword.</li>
+<li>Announces the type of challenge ([military], [intrigue], or [power]) being initiated.</li>
+<li>Announces the opponent against whom the challenge is being initiated.</li>
+<li>Announces which characters (under his or her control) are being declared as attackers, and kneels them simultaneously. In order to be eligible as an attacker, a character must have a challenge icon that corresponds with the type of challenge being initiated, and the character must be standing. At least one character must be declared as an attacker to initiate a challenge. Any character with the stealth keyword that has been declared as an attacker also chooses its stealth targets at this time if its controller desires to use the stealth keyword.</li>
 </ul>
 
 <p><em>TIMING NOTE: Once a challenge is initiated, reactions to any of the above announcements may be initiated.</em></p>
