--- a/src/AppBundle/Resources/views/Search/display-card-reviews.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-card-reviews.html.twig
@@ -26,7 +26,7 @@
 					<span class="username">{{ macros.username(review.user) }}</span>
 				</div>
 				{% for comment in review.comments %}
-				<div class="review-comment text-muted small">{{ comment.text }}
+				<div class="review-comment text-muted small">{{ comment.text|raw }}
 					&mdash;
 					<span class="username">{{ macros.username(comment.user) }}</span>
 					<time datetime="{{ comment.dateCreation|date('c') }}" title="{{ comment.dateCreation|date('F jS, Y') }}">{{ comment.dateCreation|date('n/j/y') }}</time>
