--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -688,7 +688,8 @@
 
 <ul>
 <li>  A lasting effect persists beyond the resolution of the ability that created it, for the duration specified by the effect. The effect continues to affect the game state for the specified duration regardless of whether the card that created the lasting effect is or remains in play.</li>
-<li>  A lasting effect expires as soon as the timing point specified by its duration is reached. This means that an "until the end of the round" lasting effect expires just before an "at the end of the round" ability may initiate.*   Any "until the end of the X" effects that would initiate after the end of X (via the resolution of an interrupt or reaction ability to something that occurred at the end of X) would expire immediately without affecting the game state, and therefore fail to initiate.</li>
+<li>  A lasting effect expires as soon as the timing point specified by its duration is reached. This means that an "until the end of the round" lasting effect expires just before an "at the end of the round" ability may initiate.</li>
+<li>  Any "until the end of the X" effects that would initiate after the end of X (via the resolution of an interrupt or reaction ability to something that occurred at the end of X) would expire immediately without affecting the game state, and therefore fail to initiate.</li>
 </ul>
 
 <h3 id="Leaves_Play">Leaves Play</h3>
