--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -4,8 +4,8 @@
 {% block body %}
 
 <div class="main container">
-<h1 class="site-title hidden-xs">Thr<span style="position:relative">o<span class="icon icon-power" style="position:absolute;left: .65em;top: 1.2em;font-size: 30%;"></span></span>nesDB</h1>
-<div class="site-slogan">Deckbuilder for A Game of Thrones LCG 2nd Edition</div>
+<h1 class="site-title hidden-xs">ArkhamDB</h1>
+<div class="site-slogan">Deckbuilder for the Arkham Horror LCG</div>
 </div> <!-- .container -->
 
 <div class="main container">
@@ -34,11 +34,6 @@
         </div>
     </div>
     {% endfor %}
-    </div>
-    <div class="row">
-    	<div class="col-md-12">
-    		{% include "AppBundle:Default:google-adaptable-ad.html.twig" %}
-    	</div>
     </div>
 </div>
 
