--- a/src/AppBundle/Resources/views/Builder/decks.html.twig
+++ b/src/AppBundle/Resources/views/Builder/decks.html.twig
@@ -67,10 +67,7 @@
 	<tr data-id="{{ deck.id }}">
 		<td><input type="checkbox"></td>
 		<td class="hidden-xs">
-			<img src="{{ asset('/bundles/app/images/factions/' ~ deck.faction_code ~ '.png') }}">
-			{% if deck.agenda_code is not null %}
-			<img src="{{ asset('/bundles/cards/' ~ deck.agenda_code ~ '.png') }}">
-			{% endif %}
+			<img src="{{ asset('/bundles/app/images/factions/.png') }}">
 		</td>
 		<td>
 			<a href="{{ path('deck_view',{deck_id:deck.id}) }}" class="deck-name">{{ deck.name }}</a> {{ deck.version }}
